--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -25,9 +25,10 @@ pipeline {
         stage('setup') {
             steps {
                 script {
-                    env.SLACK_HEADER = '- branch <'+env.GIT_BRANCH+'>\n'
+                    env.SLACK_HEADER = '- push on branch <'+env.GIT_BRANCH+'>\n'
                 }
                 setLogger()
+                //publish("123", "recorded", "push on branch $GIT_BRANCH")
                 slack("[INFO] Starting the pipeline")
             }
         }
@@ -42,13 +43,6 @@ pipeline {
                         for (int i = 0; i < tests.size(); i++) {
                             shell("""python3 ${tests[i]}""")
                         }
-//                         shell("""
-//                         python3 test.py
-//                         python3 test_tf.py
-//                         python3 test_type1.py
-//                         python3 test_type2.py
-//                         python3 test_type3.py
-//                         """)
                     }
                     catch (err) {
                         throw err
@@ -56,15 +50,43 @@ pipeline {
                 }
             }
         }
+        stage('promote dev image') {
+            steps {
+                sh 'az acr login --name $URL_REGISTRY_PROD -u $USER_REGISTRY_PROD -p $PASSWORD_REGISTRY_PROD'
+                sh 'docker login -u $USER_REGISTRY_PROD -p $PASSWORD_REGISTRY_PROD $URL_REGISTRY_PROD'
+                sh 'docker build -f dockerFile -t $TAG'
+                sh 'docker tag $TAG $URL_REGISTRY_DEV:$TAG'
+                sh 'docker push $URL_REGISTRY_DEV:$TAG'
+            }
+        }
         stage('exit') {
             steps {
                 script {
+                    //publish('completed','OK')
                     slack("[INFO] pipeline SUCCESS")
 
                 }
             }
         }
     }
+}
+
+import groovy.json.JsonOutput;
+
+class Event {
+    def event
+    def id
+    def service
+    def status
+    def infos
+}
+
+def publish(String id, String status, String infos){
+    Event evt = new Event('event':'ci', 'id':id, 'service':'bitbucket', 'status':status, 'infos':infos)
+    def message = JsonOutput.toJson(evt)
+    sh"""
+        gcloud pubsub topics publish notifications-prod --message ${message}
+    """
 }
 
 def slack(String body){
@@ -80,26 +102,24 @@ def readLogs(){
     echo "--- ${LOGFILE} ---"
     try {
         def logs = readFile(env.LOGFILE)
-        echo "-- BEGIN --\n${logs}\n-- EOF --"
+        //echo "-- BEGIN --\n${logs}\n-- EOF --"
         return logs
     }
     catch(e){
         def logs = "-- no logs --"
-        echo "${logs}"
+        //echo "${logs}"
         return logs
     }
 }
 
 def shell(String command){
-
     try {
         def output = sh(returnStatus: true, script: "${command} >${LOGFILE} 2>&1")
-        if (output != 0){throw new Exception("--- FAILED ---\n- command: >> "+command)}
+        if (output != 0){throw new Exception("Pipeline failed\n- command: >> "+command)}
         else { return output }
     }
     catch (error){
-        //post(readLogs())
-        slack("[ERROR] "+error.getMessage()+'\n- logs: https://upstride-deployment-service/id-1234')
+        slack("[ERROR] "+error.getMessage()+"\n- logs: ${BUILD_URL}console")
         throw error
     }
 }
