Set of basic tests for Conv2D

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,8 @@ filterwarnings =
     ignore::DeprecationWarning
 
 addopts = --doctest-modules
+; -m "not exhaustive"
+
+; custom markers used in the tests
+markers =
+    exhaustive: marks exhaustive tests performing a grid sweep over parameters
