Simple test cases for quick code verification, disabling exhaustive tests by default

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,8 +3,8 @@
 filterwarnings =
     ignore::DeprecationWarning
 
-addopts = --doctest-modules
-; -m "not exhaustive"
+; doctest might cause problems if large directories are stored within the repository
+addopts = --doctest-modules -m "not exhaustive"
 
 ; custom markers used in the tests
 markers =
