refactor and updated with review comments

--- a/dockerfile.cython
+++ b/dockerfile.cython
@@ -1,22 +1,16 @@
 FROM tensorflow/tensorflow:2.4.1-gpu AS builder
 
 # Upstride bash welcome screen
-COPY bash.bashrc /etc/bash.bashrc
 COPY upstride /opt/upstride/upstride
 COPY cython_setup.py /opt/upstride/cython_setup.py
 
-RUN rm -r /opt/upstride/upstride/tests && \
-    /usr/bin/python3 -m pip install --upgrade pip && \
+RUN /usr/bin/python3 -m pip install --upgrade pip && \
     pip3 install --no-cache-dir Cython && \
     cd /opt/upstride && \
-    python3 cython_setup.py bdist_wheel && \
-    mv /opt/upstride/dist /opt/dist && \
-    cd / && \
-    rm -r /opt/upstride
+    python3 cython_setup.py bdist_wheel
 
 FROM tensorflow/tensorflow:2.4.1-gpu
 
-COPY --from=builder /etc/bash.bashrc /etc/bash.bashrc
-COPY --from=builder /opt/dist/ /opt/dist
+COPY --from=builder /opt/upstride/dist/ /opt/dist
 RUN pip3 install --no-cache-dir /opt/dist/*.whl && \
     rm -r /opt/dist
